# OCL-MAIN

./: .gitmodules  CMakeLists.txt  DEPENDENCIES.txt  run.sh
lib/OCL-VideoProcessingLibrary/: CMakeLists.txt  run.sh
lib/OCL-VideoProcessingLibrary/install/lib/cmake/OCL-VideoProcessingLibrary/: OCL-VideoProcessingLibraryConfig.cmake  OCL-VideoProcessingLibraryTargets-noconfig.cmake  OCL-VideoProcessingLibraryTargets.cmake
lib/SFML/: CMakeLists.txt  run.sh
lib/SFML/install/lib/: libsfml-audio.so.2.5.1  libsfml-graphics.so.2.5.1  libsfml-network.so.2.5.1  libsfml-window.so.2.5.1
lib/SFML/install/pkgconfig/: sfml-all.pc  sfml-audio.pc  sfml-graphics.pc  sfml-network.pc  sfml-system.pc  sfml-window.pc
src/: main.cpp
